# secret_book_server

./: .env  .gitignore  Cargo.toml  README.md  config.toml
db/: clean_db.sh  clean_db.sql  db.sql  secret.db  secret.db-shm  secret.db-wal  setup_db.sh
src/: configurations.rs  db.rs  lib.rs  log.rs  main.rs  route.rs  startup.rs
