[package]
name = "secret_book_server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "secret_book_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
anyhow = "1.0.79"
env_logger = "0.11.1"
futures = "0.3.30"
log = "0.4.21"
reqwest = "0.11.24"

# r2d2 = "0.8"
# r2d2_sqlite = "0.22"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing-actix-web = "0.7.11"
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-appender = "0.2.3"
clap = "4.5.9"
config = "0.14.0"
[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["registry", "env-filter"]
[dependencies.uuid]
version = "1.7.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "sqlite",
  "uuid",
  "chrono",
  "migrate",
  "offline",
]
